--- a/militar_exp.ipynb
+++ b/militar_exp.ipynb
@@ -5,26 +5,41 @@
    "execution_count": null,
    "id": "30c998b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (3790106388.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    pd.read_csv(\"C:\\Users\\Meus Documentos\\Downloads\\military-spending-by-country-2025.csv\")\u001b[0m\n\u001b[1;37m                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "path = r\"C:\\Users\\Meus Documentos\\Downloads\\SIPRI-Milex-data-1949-2024_2.xlsx\"\n",
-    "\n",
-    "current = pd.read_excel(path, sheet_name='Current US$')\n",
-    "gdp_share = pd.read_excel(path, sheet_name='Share of GDP')\n",
-    "gov_share = pd.read_excel(path, sheet_name='Share of Govt. spending')\n",
-    "per_capita = pd.read_excel(path, sheet_name='Per capita')\n",
-    "\n",
-    "print(current.head())\n",
     "\n",
     "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
