--- a/militar_exp.ipynb
+++ b/militar_exp.ipynb
@@ -2,93 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "30c998b3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Military expenditure by country, in millions of US$ at current prices and exchange rates, 2014-2024      © SIPRI 2024  \\\n",
+      "0    Figures are in US $m., in current prices, conv...                                                                      \n",
+      "1    Figures in blue are SIPRI estimates. Figures i...                                                                      \n",
+      "2    \". .\" = data unavailable. \"xxx\" = country did ...                                                                      \n",
+      "3                                                  NaN                                                                      \n",
+      "4                                              Country                                                                      \n",
+      "..                                                 ...                                                                      \n",
+      "193                                              Syria                                                                      \n",
+      "194                                            Türkiye                                                                      \n",
+      "195                               United Arab Emirates                                                                      \n",
+      "196                                       Yemen, North                                                                      \n",
+      "197                                              Yemen                                                                      \n",
+      "\n",
+      "    Unnamed: 1    Unnamed: 2 Unnamed: 3    Unnamed: 4    Unnamed: 5  \\\n",
+      "0          NaN           NaN        NaN           NaN           NaN   \n",
+      "1          NaN           NaN        NaN           NaN           NaN   \n",
+      "2          NaN           NaN        NaN           NaN           NaN   \n",
+      "3          NaN           NaN        NaN           NaN           NaN   \n",
+      "4        Notes          2014       2015          2016          2017   \n",
+      "..         ...           ...        ...           ...           ...   \n",
+      "193          §           ...        ...           ...           ...   \n",
+      "194          ‖  17576.538471   15668.75  17827.702151  17822.738263   \n",
+      "195        §98  22755.071477        ...           ...           ...   \n",
+      "196       §100           xxx        xxx           xxx           xxx   \n",
+      "197        §99   1714.830844        ...           ...           ...   \n",
+      "\n",
+      "       Unnamed: 6    Unnamed: 7    Unnamed: 8    Unnamed: 9   Unnamed: 10  \\\n",
+      "0             NaN           NaN           NaN           NaN           NaN   \n",
+      "1             NaN           NaN           NaN           NaN           NaN   \n",
+      "2             NaN           NaN           NaN           NaN           NaN   \n",
+      "3             NaN           NaN           NaN           NaN           NaN   \n",
+      "4            2018          2019          2020          2021          2022   \n",
+      "..            ...           ...           ...           ...           ...   \n",
+      "193           ...           ...           ...           ...           ...   \n",
+      "194  19648.693824  20436.917121  15782.990906  15254.829835  15036.835694   \n",
+      "195           ...           ...           ...           ...           ...   \n",
+      "196           xxx           xxx           xxx           xxx           xxx   \n",
+      "197           ...           ...           ...           ...           ...   \n",
+      "\n",
+      "      Unnamed: 11   Unnamed: 12  \n",
+      "0             NaN           NaN  \n",
+      "1             NaN           NaN  \n",
+      "2             NaN           NaN  \n",
+      "3             NaN           NaN  \n",
+      "4            2023          2024  \n",
+      "..            ...           ...  \n",
+      "193           ...           ...  \n",
+      "194  19577.831924  24978.735535  \n",
+      "195           ...           ...  \n",
+      "196           xxx           xxx  \n",
+      "197           ...           ...  \n",
+      "\n",
+      "[198 rows x 13 columns]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1254 entries, 0 to 1253\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   DATASET      1254 non-null   object \n",
-      " 1   SERIES_CODE  1254 non-null   object \n",
-      " 2   OBS_MEASURE  1254 non-null   object \n",
-      " 3   COUNTRY      1254 non-null   object \n",
-      " 4   INDICATOR    1254 non-null   object \n",
-      " 5   FREQUENCY    1254 non-null   object \n",
-      " 6   SCALE        1254 non-null   object \n",
-      " 7   2014         1024 non-null   float64\n",
-      " 8   2015         1024 non-null   float64\n",
-      " 9   2016         1024 non-null   float64\n",
-      " 10  2017         1025 non-null   float64\n",
-      " 11  2018         1025 non-null   float64\n",
-      " 12  2019         1023 non-null   float64\n",
-      " 13  2020         1018 non-null   float64\n",
-      " 14  2021         1018 non-null   float64\n",
-      " 15  2022         1018 non-null   float64\n",
-      " 16  2023         1019 non-null   float64\n",
-      " 17  2024         1006 non-null   float64\n",
-      "dtypes: float64(11), object(7)\n",
-      "memory usage: 176.5+ KB\n",
-      "None\n",
-      "              DATASET        SERIES_CODE OBS_MEASURE  \\\n",
-      "0  IMF.RES:WEO(6.0.0)  MNE.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "1  IMF.RES:WEO(6.0.0)  MAR.GGXWDG_NGDP.A   OBS_VALUE   \n",
-      "2  IMF.RES:WEO(6.0.0)          NRU.LUR.A   OBS_VALUE   \n",
-      "3  IMF.RES:WEO(6.0.0)  NRU.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "4  IMF.RES:WEO(6.0.0)  MHL.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "\n",
-      "                             COUNTRY  \\\n",
-      "0                         Montenegro   \n",
-      "1                            Morocco   \n",
-      "2                 Nauru, Republic of   \n",
-      "3                 Nauru, Republic of   \n",
-      "4  Marshall Islands, Republic of the   \n",
-      "\n",
-      "                                        INDICATOR FREQUENCY  SCALE    2014  \\\n",
-      "0    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "1  Gross debt, General government, Percent of GDP    Annual  Units  58.564   \n",
-      "2                               Unemployment rate    Annual  Units     NaN   \n",
-      "3    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "4    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "\n",
-      "     2015    2016    2017    2018   2019    2020    2021    2022    2023  \\\n",
-      "0     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "1  58.394  60.084  60.261  60.458  60.27  72.245  69.351  71.532  69.475   \n",
-      "2     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "3     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "4     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "\n",
-      "     2024  \n",
-      "0     NaN  \n",
-      "1  70.028  \n",
-      "2     NaN  \n",
-      "3     NaN  \n",
-      "4     NaN  \n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'info'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(fmi_data\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# do SIPRI\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28mprint\u001b[39m(sipri_data\u001b[38;5;241m.\u001b[39minfo())\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(sipri_data\u001b[38;5;241m.\u001b[39mhead())\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'info'"
      ]
     }
    ],
