--- a/militar_exp.ipynb
+++ b/militar_exp.ipynb
@@ -1,96 +1,117 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9e00ae91",
+   "metadata": {},
+   "source": [
+    "# TITULO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4645b74a",
+   "metadata": {},
+   "source": [
+    "# 1) Importando e tratando os dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "30c998b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# importando as bases de dados de seus respctivos caminhos\n",
+    "fmi_data = pd.read_csv(r'c:\\Users\\Meus Documentos\\Downloads\\dataset_2025-06-04T01_01_07.768164706Z_DEFAULT_INTEGRATION_IMF.RES_WEO_6.0.0.csv')\n",
+    "sipri_data = pd.read_excel(r'c:\\Users\\Meus Documentos\\Downloads\\SIPRI-Milex-data-2014-2024 (1).xlsx', sheet_name=['Constant (2023) US$','Current US$','Share of GDP','Per capita','Share of Govt. spending'])\n",
+    "\n",
+    "\n",
+    "# transformando cada sheet de sipri_data em um dataframe\n",
+    "militar_expenses=sipri_data['Constant (2023) US$']\n",
+    "\n",
+    "militar_expenses_curr=sipri_data['Current US$']\n",
+    "\n",
+    "expenses_share_of_gdp=sipri_data['Share of GDP']\n",
+    "\n",
+    "expenses_per_capita=sipri_data['Per capita']\n",
+    "\n",
+    "expenses_share_of_gov=sipri_data['Share of Govt. spending']\n",
+    "\n",
+    "\n",
+    "# passando os dados para o formato long com .melt(), de modo que um ano esteja associado a mais de uma variável\n",
+    "constant_exp_long = militar_expenses.melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses')\n",
+    "current_exp_long = militar_expenses_curr.melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses_cur')\n",
+    "gdp_share_long = expenses_share_of_gdp.melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gdp')\n",
+    "percap_exp_long = expenses_per_capita.melt(id_vars=['Country'], var_name='Year', value_name='expenses_per_capita')\n",
+    "govspend_long = expenses_share_of_gov.melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gov')\n",
+    "\n",
+    "\n",
+    "# mergindo cada uma delas sucessivamente até termos um único dataframe\n",
+    "military_expenses = constant_exp_long.merge(current_exp_long, on=['Country', 'Year'], how='outer')\n",
+    "military_expenses = military_expenses.merge(gdp_share_long, on=['Country', 'Year'], how='outer')\n",
+    "military_expenses = military_expenses.merge(percap_exp_long, on=['Country', 'Year'], how='outer')\n",
+    "military_expenses = military_expenses.merge(govspend_long, on=['Country', 'Year'], how='outer')\n",
+    "\n",
+    "# verificando nosso df final\n",
+    "print(militar_expenses.info())\n",
+    "print(militar_expenses.head())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a26bdf95",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Military expenditure by country, in millions of US$ at current prices and exchange rates, 2014-2024      © SIPRI 2024  \\\n",
-      "0    Figures are in US $m., in current prices, conv...                                                                      \n",
-      "1    Figures in blue are SIPRI estimates. Figures i...                                                                      \n",
-      "2    \". .\" = data unavailable. \"xxx\" = country did ...                                                                      \n",
-      "3                                                  NaN                                                                      \n",
-      "4                                              Country                                                                      \n",
-      "..                                                 ...                                                                      \n",
-      "193                                              Syria                                                                      \n",
-      "194                                            Türkiye                                                                      \n",
-      "195                               United Arab Emirates                                                                      \n",
-      "196                                       Yemen, North                                                                      \n",
-      "197                                              Yemen                                                                      \n",
+      "              DATASET        SERIES_CODE OBS_MEASURE  \\\n",
+      "0  IMF.RES:WEO(6.0.0)  MNE.GGXWDN_NGDP.A   OBS_VALUE   \n",
+      "1  IMF.RES:WEO(6.0.0)  MAR.GGXWDG_NGDP.A   OBS_VALUE   \n",
+      "2  IMF.RES:WEO(6.0.0)          NRU.LUR.A   OBS_VALUE   \n",
+      "3  IMF.RES:WEO(6.0.0)  NRU.GGXWDN_NGDP.A   OBS_VALUE   \n",
+      "4  IMF.RES:WEO(6.0.0)  MHL.GGXWDN_NGDP.A   OBS_VALUE   \n",
       "\n",
-      "    Unnamed: 1    Unnamed: 2 Unnamed: 3    Unnamed: 4    Unnamed: 5  \\\n",
-      "0          NaN           NaN        NaN           NaN           NaN   \n",
-      "1          NaN           NaN        NaN           NaN           NaN   \n",
-      "2          NaN           NaN        NaN           NaN           NaN   \n",
-      "3          NaN           NaN        NaN           NaN           NaN   \n",
-      "4        Notes          2014       2015          2016          2017   \n",
-      "..         ...           ...        ...           ...           ...   \n",
-      "193          §           ...        ...           ...           ...   \n",
-      "194          ‖  17576.538471   15668.75  17827.702151  17822.738263   \n",
-      "195        §98  22755.071477        ...           ...           ...   \n",
-      "196       §100           xxx        xxx           xxx           xxx   \n",
-      "197        §99   1714.830844        ...           ...           ...   \n",
+      "                             COUNTRY  \\\n",
+      "0                         Montenegro   \n",
+      "1                            Morocco   \n",
+      "2                 Nauru, Republic of   \n",
+      "3                 Nauru, Republic of   \n",
+      "4  Marshall Islands, Republic of the   \n",
       "\n",
-      "       Unnamed: 6    Unnamed: 7    Unnamed: 8    Unnamed: 9   Unnamed: 10  \\\n",
-      "0             NaN           NaN           NaN           NaN           NaN   \n",
-      "1             NaN           NaN           NaN           NaN           NaN   \n",
-      "2             NaN           NaN           NaN           NaN           NaN   \n",
-      "3             NaN           NaN           NaN           NaN           NaN   \n",
-      "4            2018          2019          2020          2021          2022   \n",
-      "..            ...           ...           ...           ...           ...   \n",
-      "193           ...           ...           ...           ...           ...   \n",
-      "194  19648.693824  20436.917121  15782.990906  15254.829835  15036.835694   \n",
-      "195           ...           ...           ...           ...           ...   \n",
-      "196           xxx           xxx           xxx           xxx           xxx   \n",
-      "197           ...           ...           ...           ...           ...   \n",
+      "                                        INDICATOR FREQUENCY  SCALE    2014  \\\n",
+      "0    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
+      "1  Gross debt, General government, Percent of GDP    Annual  Units  58.564   \n",
+      "2                               Unemployment rate    Annual  Units     NaN   \n",
+      "3    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
+      "4    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
       "\n",
-      "      Unnamed: 11   Unnamed: 12  \n",
-      "0             NaN           NaN  \n",
-      "1             NaN           NaN  \n",
-      "2             NaN           NaN  \n",
-      "3             NaN           NaN  \n",
-      "4            2023          2024  \n",
-      "..            ...           ...  \n",
-      "193           ...           ...  \n",
-      "194  19577.831924  24978.735535  \n",
-      "195           ...           ...  \n",
-      "196           xxx           xxx  \n",
-      "197           ...           ...  \n",
+      "     2015    2016    2017    2018   2019    2020    2021    2022    2023  \\\n",
+      "0     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
+      "1  58.394  60.084  60.261  60.458  60.27  72.245  69.351  71.532  69.475   \n",
+      "2     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
+      "3     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
+      "4     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
       "\n",
-      "[198 rows x 13 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+      "     2024  \n",
+      "0     NaN  \n",
+      "1  70.028  \n",
+      "2     NaN  \n",
+      "3     NaN  \n",
+      "4     NaN  \n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# importando as bases de dados de seus respctivos caminhos\n",
-    "\n",
-    "fmi_data = pd.read_csv(r'C:\\Users\\Meus Documentos\\Downloads\\dataset_2025-06-04T01_01_07.768164706Z_DEFAULT_INTEGRATION_IMF.RES_WEO_6.0.0.csv')\n",
-    "sipri_data = pd.read_excel(r'C:\\Users\\Meus Documentos\\Downloads\\SIPRI-Milex-data-2014-2024.xlsx', sheet_name=['Current US$','Share of GDP','Per capita','Share of Govt. spending'])\n",
-    "\n",
-    "# vendo as informaçoes dos dataframes\n",
-    "\n",
-    "# do FMI\n",
-    "print(fmi_data.info())\n",
-    "print(fmi_data.head())\n",
-    "\n",
-    "# do SIPRI\n",
-    "print(sipri_data.info())\n",
-    "print(sipri_data.head())\n"
+    "print(fmi_data.head())"
    ]
   }
  ],
