--- a/militar_exp.ipynb
+++ b/militar_exp.ipynb
@@ -5,7 +5,9 @@
    "id": "9e00ae91",
    "metadata": {},
    "source": [
-    "# TITULO"
+    "# **Relação entre gastos militares das nações e seu impacto econômico: positivo ou negativo?**\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -18,37 +20,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "30c998b3",
+   "execution_count": 68,
+   "id": "1e03511f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# importando as bases de dados de seus respctivos caminhos\n",
-    "fmi_data = pd.read_csv(r'c:\\Users\\Meus Documentos\\Downloads\\dataset_2025-06-04T01_01_07.768164706Z_DEFAULT_INTEGRATION_IMF.RES_WEO_6.0.0.csv')\n",
-    "sipri_data = pd.read_excel(r'c:\\Users\\Meus Documentos\\Downloads\\SIPRI-Milex-data-2014-2024 (1).xlsx', sheet_name=['Constant (2023) US$','Current US$','Share of GDP','Per capita','Share of Govt. spending'])\n",
-    "\n",
-    "\n",
-    "# transformando cada sheet de sipri_data em um dataframe\n",
-    "militar_expenses=sipri_data['Constant (2023) US$']\n",
-    "\n",
-    "militar_expenses_curr=sipri_data['Current US$']\n",
-    "\n",
-    "expenses_share_of_gdp=sipri_data['Share of GDP']\n",
-    "\n",
-    "expenses_per_capita=sipri_data['Per capita']\n",
-    "\n",
-    "expenses_share_of_gov=sipri_data['Share of Govt. spending']\n",
-    "\n",
-    "\n",
+    "sipri_data = pd.read_excel(\n",
+    "    r'c:\\Users\\Meus Documentos\\Downloads\\SIPRI-Milex-data-2014-2024.xlsx',\n",
+    "    sheet_name=[\n",
+    "        'Constant (2023) US$', 'Current US$', 'Share of GDP',\n",
+    "        'Per capita', 'Share of Govt. spending'\n",
+    "    ]\n",
+    ")\n",
+    "fmi_data = pd.read_csv(r'c:\\Users\\Meus Documentos\\Downloads\\dataset_2025-06-04T01_01_07.768164706Z_DEFAULT_INTEGRATION_IMF.RES_WEO_6.0.0.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48406e91",
+   "metadata": {},
+   "source": [
+    "# a) Tratando a base sipri_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4df69d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# passando os dados para o formato long com .melt(), de modo que um ano esteja associado a mais de uma variável\n",
-    "constant_exp_long = militar_expenses.melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses')\n",
-    "current_exp_long = militar_expenses_curr.melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses_cur')\n",
-    "gdp_share_long = expenses_share_of_gdp.melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gdp')\n",
-    "percap_exp_long = expenses_per_capita.melt(id_vars=['Country'], var_name='Year', value_name='expenses_per_capita')\n",
-    "govspend_long = expenses_share_of_gov.melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gov')\n",
+    "constant_exp_long = sipri_data['Constant (2023) US$'].melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses')\n",
+    "current_exp_long = sipri_data['Current US$'].melt(id_vars=['Country'], var_name='Year', value_name='militar_expenses_cur')\n",
+    "gdp_share_long = sipri_data['Share of GDP'].melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gdp')\n",
+    "percap_exp_long = sipri_data['Per capita'].melt(id_vars=['Country'], var_name='Year', value_name='expenses_per_capita')\n",
+    "govspend_long = sipri_data['Share of Govt. spending'].melt(id_vars=['Country'], var_name='Year', value_name='expenses_share_of_gov')\n",
     "\n",
+    "# definindo e aplicando a função clean para converter valores não numéricos e eliminá-los se nulos\n",
+    "def clean(df, value_col):\n",
+    "    df[value_col] = pd.to_numeric(df[value_col], errors='coerce')\n",
+    "    df['Year'] = df['Year'].astype(int)\n",
+    "    return df\n",
+    "\n",
+    "constant_exp_long = clean(constant_exp_long, 'militar_expenses')\n",
+    "current_exp_long = clean(current_exp_long, 'militar_expenses_cur')\n",
+    "gdp_share_long = clean(gdp_share_long, 'expenses_share_of_gdp')\n",
+    "percap_exp_long = clean(percap_exp_long, 'expenses_per_capita')\n",
+    "govspend_long = clean(govspend_long, 'expenses_share_of_gov')\n",
     "\n",
     "# mergindo cada uma delas sucessivamente até termos um único dataframe\n",
     "military_expenses = constant_exp_long.merge(current_exp_long, on=['Country', 'Year'], how='outer')\n",
@@ -56,30 +78,38 @@
     "military_expenses = military_expenses.merge(percap_exp_long, on=['Country', 'Year'], how='outer')\n",
     "military_expenses = military_expenses.merge(govspend_long, on=['Country', 'Year'], how='outer')\n",
     "\n",
-    "# verificando nosso df final\n",
-    "print(militar_expenses.info())\n",
-    "print(militar_expenses.head())\n",
+    "# remover linhas nulas e verificando se funcionou com .sum()\n",
+    "military_expenses = military_expenses.dropna(subset=[\n",
+    "    'militar_expenses', 'militar_expenses_cur',\n",
+    "    'expenses_share_of_gdp', 'expenses_per_capita',\n",
+    "    'expenses_share_of_gov'\n",
+    "])\n",
     "\n",
-    "\n"
+    "print(military_expenses.isna().sum())\n",
+    "\n",
+    "# verificando nosso df final\n",
+    "print(military_expenses.info())\n",
+    "print(military_expenses.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "484eca0a",
+   "metadata": {},
+   "source": [
+    "# b) Tratando a base fmi_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "a26bdf95",
+   "execution_count": null,
+   "id": "5ed4694f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              DATASET        SERIES_CODE OBS_MEASURE  \\\n",
-      "0  IMF.RES:WEO(6.0.0)  MNE.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "1  IMF.RES:WEO(6.0.0)  MAR.GGXWDG_NGDP.A   OBS_VALUE   \n",
-      "2  IMF.RES:WEO(6.0.0)          NRU.LUR.A   OBS_VALUE   \n",
-      "3  IMF.RES:WEO(6.0.0)  NRU.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "4  IMF.RES:WEO(6.0.0)  MHL.GGXWDN_NGDP.A   OBS_VALUE   \n",
-      "\n",
       "                             COUNTRY  \\\n",
       "0                         Montenegro   \n",
       "1                            Morocco   \n",
@@ -87,31 +117,17 @@
       "3                 Nauru, Republic of   \n",
       "4  Marshall Islands, Republic of the   \n",
       "\n",
-      "                                        INDICATOR FREQUENCY  SCALE    2014  \\\n",
-      "0    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "1  Gross debt, General government, Percent of GDP    Annual  Units  58.564   \n",
-      "2                               Unemployment rate    Annual  Units     NaN   \n",
-      "3    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "4    Net debt, General government, Percent of GDP    Annual  Units     NaN   \n",
-      "\n",
-      "     2015    2016    2017    2018   2019    2020    2021    2022    2023  \\\n",
-      "0     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "1  58.394  60.084  60.261  60.458  60.27  72.245  69.351  71.532  69.475   \n",
-      "2     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "3     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "4     NaN     NaN     NaN     NaN    NaN     NaN     NaN     NaN     NaN   \n",
-      "\n",
-      "     2024  \n",
-      "0     NaN  \n",
-      "1  70.028  \n",
-      "2     NaN  \n",
-      "3     NaN  \n",
-      "4     NaN  \n"
+      "                                        INDICATOR     Year           fmi_value  \n",
+      "0    Net debt, General government, Percent of GDP  DATASET  IMF.RES:WEO(6.0.0)  \n",
+      "1  Gross debt, General government, Percent of GDP  DATASET  IMF.RES:WEO(6.0.0)  \n",
+      "2                               Unemployment rate  DATASET  IMF.RES:WEO(6.0.0)  \n",
+      "3    Net debt, General government, Percent of GDP  DATASET  IMF.RES:WEO(6.0.0)  \n",
+      "4    Net debt, General government, Percent of GDP  DATASET  IMF.RES:WEO(6.0.0)  \n"
      ]
     }
    ],
    "source": [
-    "print(fmi_data.head())"
+    "# "
    ]
   }
  ],
